control/robot_controller/log/build_2024-11-06_13-47-54/robotarm_control_package/stderr.log
  File "/home/aa/robot_controller/install/robotarm_control_package/lib/python3.10/site-packages/robotarm_control_package/robotarm_controller_node.py", line 435
    elif tray_num == 2::
                       ^
SyntaxError: invalid syntax

